# file-verse

./: CMakeLists.txt  file.txt  file_system_design.md  ofs_client  ofs_server
documentation/: OFS_Testing_Summary.md  OFS_architecture.md  design_choices.md  file_io_strategy.md  testing_report.md
source/: client_main.cpp  filesystem.omni  server_main.cpp
source/data_structures/: directory_tree.hpp  filesystem.omni  free_space.hpp  main  main.cpp  session_manger.hpp  user_manager.hpp
source/include/core/: OFSCore.hpp  file_io_manager.hpp  odf_types.hpp  ofs_client.cpp  ofs_server.cpp
source/ui/: h.py
